--- a/package.json
+++ b/package.json
@@ -13,8 +13,13 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/dannyvassallo/sernjs.git"
+    "url": "https://github.com/seanrsain/AccessibleMaterialsSystem"
   },
+  "keywords": [
+    "node",
+    "heroku",
+    "express"
+  ],
   "author": "Danny Vassallo",
   "license": "ISC",
   "bugs": {
@@ -66,6 +71,7 @@
     "whatwg-fetch": "^1.0.0"
   },
   "devDependencies": {
+    "babel-core": "^6.26.0",
     "nodemon": "^1.10.0"
   }
 }
