--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "pretty-error": "^2.0.0",
     "react": "^15.3.0",
     "react-dom": "^15.3.0",
+    "react-modal": "^3.2.1",
     "react-router": "^2.6.1",
     "redux": "^3.5.2",
     "reload": "^1.0.1",
